min width css to fix icons reacting differently on smaller viewpoints

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -49,21 +49,23 @@
   --ifm-announcement-color: #eff4ef;
 }
 
-.navbar-icon {
-  border-radius: 50%;
-  display: flex;
-  height: 32px;
-  width: 32px;
-  align-items: center;
-  justify-content: center;
-  margin-right: 12px;
-  padding: 0;
-  transition: background var(--ifm-transition-fast);
-}
+@media screen and (min-width: 997px) {
+  .navbar-icon {
+    border-radius: 50%;
+    display: flex;
+    height: 32px;
+    width: 32px;
+    align-items: center;
+    justify-content: center;
+    margin-right: 12px;
+    padding: 0;
+    transition: background var(--ifm-transition-fast);
+  }
 
-.navbar-icon:hover {
-  background: var(--ifm-color-emphasis-200);
-  color: inherit;
+  .navbar-icon:hover {
+    background: var(--ifm-color-emphasis-200);
+    color: inherit;
+  }
 }
 
 .header-github-link:hover {
